--- a/gradle/download-schema.gradle
+++ b/gradle/download-schema.gradle
@@ -2,7 +2,7 @@ task downloadSchema(type: Copy) {
     def address='https://mapbox.s3.amazonaws.com/mapbox-gl-native/event-schema/mobile-event-schemas.jsonl.gz'
     def target='libtelemetry/src/test/resources/'
 
-    new File(target + "${address.tokenize('/')[-1]}").withOutputStream { out ->
-        new URL(address).withInputStream { from ->  out << from }
-    }
+//    new File(target + "${address.tokenize('/')[-1]}").withOutputStream { out ->
+//        new URL(address).withInputStream { from ->  out << from }
+//    }
 }
